Enhance configuration management and trading functionality
- Updated `bot_config.json` to include trading parameters with default values for leverage and balance percentage.
- Refactored `config.py` to improve configuration loading, saving, and default handling for trading parameters.
- Enhanced `telegram.py` to load configuration from the updated `bot_config.json` and improved error messages for missing environment variables.
- Updated trading logic in `trading.py` to utilize new trading parameters and improved error handling for order placement and market price retrieval.
- Added functionality for quick trades and enhanced user feedback in the Telegram bot interface.
- Overall improvements to error handling and user experience in trading operations.

--- a/config/bot_config.json
+++ b/config/bot_config.json
@@ -2,5 +2,9 @@
     "use_testnet": true,
     "leverage": 20,
     "balance_percentage": 0.1,
-    "active_api": "testnet"
+    "active_api": "testnet",
+    "trading_params": {
+        "leverage": 20,
+        "balance_percentage": 0.05
+    }
 }
