Update bot configuration and enhance trading bot initialization
- Modified `bot_config.json` to change the balance percentage from 0.1 to 0.05 and added a new environment setting for 'mainnet'.
- Refactored `telegram.py` to initialize the trading bot with the current configuration, improving the handling of environment switching and balance retrieval.
- Enhanced error handling during balance fetching and trading operations, providing clearer feedback to users.
- Updated `trading.py` to accept a `config_manager` instance during `BybitTradingBot` initialization, ensuring better configuration management.
- Adjusted tests in `test_trading.py` to reflect changes in the `BybitTradingBot` initialization process.

--- a/config/bot_config.json
+++ b/config/bot_config.json
@@ -5,6 +5,7 @@
     "active_api": "testnet",
     "trading_params": {
         "leverage": 20,
-        "balance_percentage": 0.1
-    }
+        "balance_percentage": 0.05
+    },
+    "environment": "mainnet"
 }
