Update deployment scripts and configuration management for trading bot
- Modified `bybit_bot.service` to change the execution command for the Telegram bot.
- Enhanced `deploy.sh` to create a `config` directory with a new `.env` file for API keys and tokens, and a `bot_config.json` file for trading parameters.
- Improved permissions for configuration files to enhance security.
- Updated deployment instructions to include information about the new configuration files.

This commit streamlines the setup process and improves configuration management for the trading bot.

--- a/deploy/server/bybit_bot.service
+++ b/deploy/server/bybit_bot.service
@@ -7,7 +7,7 @@ Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu/bybit_trading_bot
 Environment=PATH=/home/ubuntu/bybit_trading_bot/venv/bin
-ExecStart=/home/ubuntu/bybit_trading_bot/venv/bin/python telegram_bot.py
+ExecStart=/home/ubuntu/bybit_trading_bot/venv/bin/python -m src.bot.telegram
 Restart=always
 RestartSec=10
 
